# ugv-visual-inertial-slam-navigation

./: .gitignore  README.md
datasets/4seasons/: .gitignore  CHANGELOG.md  EXPERIMENTS_4SEASONS.md  README.md
datasets/4seasons/configs/: 4Seasons_Stereo_Inertial.yaml
datasets/4seasons/scripts/: convert_4seasons_to_euroc.py  evaluate_4seasons.py  run_4seasons_experiment.sh  run_4seasons_hloc.py
datasets/nclt/: .gitignore  CHANGELOG.md  README.md  WEEK1_SUMMARY.md  download_nclt.py  requirements.txt
datasets/nclt/configs/: nclt_cam0_calibrated.json  nclt_ladybug3.yaml  nclt_ladybug3_half.yaml  nclt_mono_aggressive.yaml  nclt_mono_inertial.yaml
datasets/nclt/notebooks/: 01_hloc_nclt_results.ipynb
datasets/nclt/reports/: orbslam3_nclt_report.md
datasets/nclt/scripts/: calibrate_camera_colmap.py  demo.py  plot_all_results.py  (+21 more)
datasets/nclt_kaggle/: .gitignore  PROJECT_CONTEXT.md  README.md  requirements.txt  setup.py
datasets/robotcar/: .gitignore  CHANGELOG.md  EXPERIMENTS_ROBOTCAR.md  README.md
datasets/rover/: CHANGELOG.md  EXPERIMENTS_ROVER.md  README.md  REPORT_experiment_1.1.md  RESULTS_ANALYSIS.md
docs/: experiment_index.md  thesis_reading_order.md
simulation/: README.md
simulation/gazebo/src/ugv_gazebo/: CMakeLists.txt  package.xml
simulation/gazebo/src/ugv_gazebo/config/: bridge_config.yaml
simulation/gazebo/src/ugv_gazebo/launch/: full_sim.launch.py  simulation.launch.py  teleop.launch.py
simulation/gazebo/src/ugv_gazebo/worlds/: outdoor_terrain.sdf  terrain.mtl  warehouse.sdf
simulation/gazebo/src/ugv_navigation/: CMakeLists.txt  package.xml
simulation/gazebo/src/ugv_navigation/config/: nav2_params.yaml  nav2_view.rviz  rtabmap_params.yaml
simulation/gazebo/src/ugv_navigation/launch/: navigation.launch.py
simulation/isaac/: .gitignore  Proposed_Solution.md  README.md
(+1164 files in other folders)
